mdb/src/query/parser/grammar/sparql/query_autogenerated/SparqlQueryParser.cc

// Generated from SparqlQueryParser.g4 by ANTLR 4.13.1


#include "SparqlQueryParserVisitor.h"

#include "SparqlQueryParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SparqlQueryParserStaticData final {
  SparqlQueryParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SparqlQueryParserStaticData(const SparqlQueryParserStaticData&) = delete;
  SparqlQueryParserStaticData(SparqlQueryParserStaticData&&) = delete;
  SparqlQueryParserStaticData& operator=(const SparqlQueryParserStaticData&) = delete;
  SparqlQueryParserStaticData& operator=(SparqlQueryParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sparqlqueryparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SparqlQueryParserStaticData *sparqlqueryparserParserStaticData = nullptr;

void sparqlqueryparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sparqlqueryparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(sparqlqueryparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SparqlQueryParserStaticData>(
    std::vector<std::string>{
      "query", "showQuery", "prologue", "baseDecl", "prefixDecl", "selectQuery", 
      "subSelect", "selectClause", "selectModifier", "selectVariables", 
      "constructQuery", "describeQuery", "askQuery", "datasetClause", "whereClause", 
      "solutionModifier", "groupClause", "groupCondition", "havingClause", 
      "havingCondition", "orderClause", "orderCondition", "limitOffsetClauses", 
      "limitClause", "offsetClause", "valuesClause", "triplesTemplate", 
      "groupGraphPattern", "groupGraphPatternSub", "groupGraphPatternSubList", 
      "triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", 
      "graphGraphPattern", "serviceGraphPattern", "bind", "inlineData", 
      "dataBlock", "inlineDataOneVar", "inlineDataFull", "dataBlockValues", 
      "dataBlockValue", "minusGraphPattern", "groupOrUnionGraphPattern", 
      "filter", "constraint", "functionCall", "argList", "expressionList", 
      "constructTemplate", "constructTriples", "triplesSameSubject", "propertyList", 
      "propertyListNotEmpty", "verb", "objectList", "object", "triplesSameSubjectPath", 
      "propertyListPath", "propertyListPathNotEmpty", "propertyListPathNotEmptyList", 
      "verbPath", "verbSimple", "objectListPath", "objectPath", "path", 
      "pathAlternative", "pathSequence", "pathElt", "pathEltOrInverse", 
      "pathMod", "pathQuantity", "pathQuantityExact", "pathQuantityRange", 
      "pathQuantityMin", "pathQuantityMax", "pathPrimary", "pathNegatedPropertySet", 
      "pathOneInPropertySet", "integer", "triplesNode", "blankNodePropertyList", 
      "triplesNodePath", "blankNodePropertyListPath", "collection", "collectionPath", 
      "graphNode", "graphNodePath", "varOrTerm", "varOrIRI", "var", "graphTerm", 
      "nil", "expression", "conditionalOrExpression", "conditionalAndExpression", 
      "relationalExpression", "additiveExpression", "rhsAdditiveExpression", 
      "rhsAdditiveExpressionSub", "multiplicativeExpression", "unaryExpression", 
      "primaryExpression", "builtInCall", "regexExpression", "subStringExpression", 
      "strReplaceExpression", "existsFunction", "notExistsFunction", "aggregate", 
      "iriOrFunction", "rdfLiteral", "numericLiteral", "numericLiteralUnsigned", 
      "numericLiteralPositive", "numericLiteralNegative", "booleanLiteral", 
      "string", "iri", "prefixedName", "blankNode", "anon"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "'a'", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "'^^'", "'<='", "'>='", 
      "'!='", "'&&'", "'||'", "'^'", "'('", "')'", "'{'", "'}'", "'['", 
      "']'", "';'", "'.'", "'+'", "'-'", "'*'", "'\\u003F'", "','", "'!'", 
      "'/'", "'='", "'<'", "'>'", "'|'"
    },
    std::vector<std::string>{
      "", "WS", "BASE", "PREFIX", "SELECT", "DISTINCT", "REDUCED", "CONSTRUCT", 
      "DESCRIBE", "ASK", "FROM", "NAMED", "WHERE", "ORDER", "BY", "ASC", 
      "DESC", "LIMIT", "OFFSET", "VALUES", "OPTIONAL", "GRAPH", "UNION", 
      "FILTER", "A", "STR", "LANG", "LANGMATCHES", "DATATYPE", "BOUND", 
      "SAMETERM", "ISIRI", "ISURI", "ISBLANK", "ISLITERAL", "REGEX", "SUBSTR", 
      "K_TRUE", "K_FALSE", "SILENT", "ALL", "AS", "GROUP", "HAVING", "UNDEF", 
      "BINDINGS", "SERVICE", "BIND", "MINUS", "IRI", "URI", "BNODE", "RAND", 
      "ABS", "CEIL", "FLOOR", "ROUND", "CONCAT", "STRLEN", "UCASE", "LCASE", 
      "ENCODE_FOR_URI", "CONTAINS", "STRSTARTS", "STRENDS", "STRBEFORE", 
      "STRAFTER", "REPLACE", "YEAR", "MONTH", "DAY", "HOURS", "MINUTES", 
      "SECONDS", "TIMEZONE", "TZ", "NOW", "UUID", "STRUUID", "MD5", "SHA1", 
      "SHA256", "SHA384", "SHA512", "COALESCE", "IF", "STRLANG", "STRDT", 
      "ISNUMERIC", "COUNT", "SUM", "MIN", "MAX", "AVG", "SAMPLE", "GROUP_CONCAT", 
      "NOT", "IN", "EXISTS", "SEPARATOR", "ANY", "SHORTEST", "SIMPLE", "ACYCLIC", 
      "WALKS", "SHOW", "TEXT", "INDEX", "HNSW", "IRIREF", "PNAME_NS", "PNAME_LN", 
      "BLANK_NODE_LABEL", "VAR1", "VAR2", "LANGTAG", "INTEGER", "DECIMAL", 
      "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", 
      "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "STRING_LITERAL1", 
      "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", 
      "COMMENT", "REFERENCE", "LESS_EQUAL", "GREATER_EQUAL", "NOT_EQUAL", 
      "AND", "OR", "INVERSE", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_CURLY_BRACE", 
      "CLOSE_CURLY_BRACE", "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", 
      "SEMICOLON", "DOT", "PLUS_SIGN", "MINUS_SIGN", "ASTERISK", "QUESTION_MARK", 
      "COMMA", "NEGATION", "DIVIDE", "EQUAL", "LESS", "GREATER", "PIPE", 
      "ANY_OTHER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sparqlqueryparserParserStaticData = staticData.release();
}

}

SparqlQueryParser::SparqlQueryParser(TokenStream *input) : SparqlQueryParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SparqlQueryParser::SparqlQueryParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SparqlQueryParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sparqlqueryparserParserStaticData->atn, sparqlqueryparserParserStaticData->decisionToDFA, sparqlqueryparserParserStaticData->sharedContextCache, options);
}

SparqlQueryParser::~SparqlQueryParser() {
  delete _interpreter;
}

const atn::ATN& SparqlQueryParser::getATN() const {
  return *sparqlqueryparserParserStaticData->atn;
}

std::string SparqlQueryParser::getGrammarFileName() const {
  return "SparqlQueryParser.g4";
}

const std::vector<std::string>& SparqlQueryParser::getRuleNames() const {
  return sparqlqueryparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& SparqlQueryParser::getVocabulary() const {
  return sparqlqueryparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SparqlQueryParser::getSerializedATN() const {
  return sparqlqueryparserParserStaticData->serializedATN;
}


//----------------- QueryContext ------------------------------------------------------------------

SparqlQueryParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SparqlQueryParser::PrologueContext* SparqlQueryParser::QueryContext::prologue() {
  return getRuleContext<SparqlQueryParser::PrologueContext>(0);
}

SparqlQueryParser::ValuesClauseContext* SparqlQueryParser::QueryContext::valuesClause() {
  return getRuleContext<SparqlQueryParser::ValuesClauseContext>(0);
}

tree::TerminalNode* SparqlQueryParser::QueryContext::EOF() {
  return getToken(SparqlQueryParser::EOF, 0);
}

SparqlQueryParser::SelectQueryContext* SparqlQueryParser::QueryContext::selectQuery() {
  return getRuleContext<SparqlQueryParser::SelectQueryContext>(0);
}

SparqlQueryParser::ConstructQueryContext* SparqlQueryParser::QueryContext::constructQuery() {
  return getRuleContext<SparqlQueryParser::ConstructQueryContext>(0);
}

SparqlQueryParser::DescribeQueryContext* SparqlQueryParser::QueryContext::describeQuery() {
  return getRuleContext<SparqlQueryParser::DescribeQueryContext>(0);
}

SparqlQueryParser::AskQueryContext* SparqlQueryParser::QueryContext::askQuery() {
  return getRuleContext<SparqlQueryParser::AskQueryContext>(0);
}

SparqlQueryParser::ShowQueryContext* SparqlQueryParser::QueryContext::showQuery() {
  return getRuleContext<SparqlQueryParser::ShowQueryContext>(0);
}


size_t SparqlQueryParser::QueryContext::getRuleIndex() const {
  return SparqlQueryParser::RuleQuery;
}


std::any SparqlQueryParser::QueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SparqlQueryParserVisitor*>(visitor))
    return parserVisitor->visitQuery(this);
  else
    return visitor->visitChildren(this);
}

SparqlQueryParser::QueryContext* SparqlQueryParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 0, SparqlQueryParser::RuleQuery);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(255);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SparqlQueryParser::BASE:
      case SparqlQueryParser::PREFIX:
      case SparqlQueryParser::SELECT:
      case SparqlQueryParser::CONSTRUCT:
      case SparqlQueryParser::DESCRIBE:
      case SparqlQueryParser::ASK: {
        enterOuterAlt(_localctx, 1);
        setState(244);
        prologue();
        setState(249);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case SparqlQueryParser::SELECT: {
            setState(245);
            selectQuery();
            break;
          }

          case SparqlQueryParser::CONSTRUCT: {
            setState(246);
            constructQuery();
            break;
          }

          case SparqlQueryParser::DESCRIBE: {
            setState(247);
            describeQuery();
            break;
          }

          case SparqlQueryParser::ASK: {
            setState(248);
            askQuery();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(251);
        valuesClause();
        setState(252);
        match(SparqlQueryParser::EOF);
        break;
      }

      case SparqlQueryParser::SHOW: {
        enterOuterAlt(_localctx, 2);
        setState(254);
        showQuery();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShowQueryContext ------------------------------------------------------------------

SparqlQueryParser::ShowQueryContext::ShowQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SparqlQueryParser::ShowQueryContext::SHOW() {
  return getToken(SparqlQueryParser::SHOW, 0);
}

tree::TerminalNode* SparqlQueryParser::ShowQueryContext::TEXT() {
  return getToken(SparqlQueryParser::TEXT, 0);
}

tree::TerminalNode* SparqlQueryParser::ShowQueryContext::INDEX() {
  return getToken(SparqlQueryParser::INDEX, 0);
}

tree::TerminalNode* SparqlQueryParser::ShowQueryContext::HNSW() {
  return getToken(SparqlQueryParser::HNSW, 0);
}


size_t SparqlQueryParser::ShowQueryContext::getRuleIndex() const {
  return SparqlQueryParser::RuleShowQuery;
}


std::any SparqlQueryParser::ShowQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SparqlQueryParserVisitor*>(visitor))
    return parserVisitor->visitShowQuery(this);
  else
    return visitor->visitChildren(this);
}

SparqlQueryParser::ShowQueryContext* SparqlQueryParser::showQuery() {
  ShowQueryContext *_localctx = _tracker.createInstance<ShowQueryContext>(_ctx, getState());
  enterRule(_localctx, 2, SparqlQueryParser::RuleShowQuery);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(257);
    match(SparqlQueryParser::SHOW);
    setState(262);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SparqlQueryParser::TEXT: {
        setState(258);
        match(SparqlQueryParser::TEXT);
        setState(259);
        match(SparqlQueryParser::INDEX);
        break;
      }

      case SparqlQueryParser::HNSW: {
        setState(260);
        match(SparqlQueryParser::HNSW);
        setState(261);
        match(SparqlQueryParser::INDEX);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrologueContext ------------------------------------------------------------------

SparqlQueryParser::PrologueContext::PrologueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SparqlQueryParser::BaseDeclContext *> SparqlQueryParser::PrologueContext::baseDecl() {
  return getRuleContexts<SparqlQueryParser::BaseDeclContext>();
}

SparqlQueryParser::BaseDeclContext* SparqlQueryParser::PrologueContext::baseDecl(size_t i) {
  return getRuleContext<SparqlQueryParser::BaseDeclContext>(i);
}

std::vector<SparqlQueryParser::PrefixDeclContext *> SparqlQueryParser::PrologueContext::prefixDecl() {
  return getRuleContexts<SparqlQueryParser::PrefixDeclContext>();
}

SparqlQueryParser::PrefixDeclContext* SparqlQueryParser::PrologueContext::prefixDecl(size_t i) {
  return getRuleContext<SparqlQueryParser::PrefixDeclContext>(i);
}


size_t SparqlQueryParser::PrologueContext::getRuleIndex() const {
  return SparqlQueryParser::RulePrologue;
}


std::any SparqlQueryParser::PrologueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SparqlQueryParserVisitor*>(visitor))
    return parserVisitor->visitPrologue(this);
  else
    return visitor->visitChildren(this);
}

SparqlQueryParser::PrologueContext* SparqlQueryParser::prologue() {
  PrologueContext *_localctx = _tracker.createInstance<PrologueContext>(_ctx, getState());
  enterRule(_localctx, 4, SparqlQueryParser::RulePrologue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(268);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SparqlQueryParser::BASE

    || _la == SparqlQueryParser::PREFIX) {
      setState(266);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case SparqlQueryParser::BASE: {
          setState(264);
          baseDecl();
          break;
        }

        case SparqlQueryParser::PREFIX: {
          setState(265);
          prefixDecl();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(270);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BaseDeclContext ------------------------------------------------------------------
